@@ -11,16 +11,18 @@ import com.brandon3055.draconicevolution.api.modules.ModuleTypes;
 import com.brandon3055.draconicevolution.api.modules.data.EnergyData;
 import com.brandon3055.draconicevolution.api.modules.data.EnergyShareData;
 import com.brandon3055.draconicevolution.api.modules.data.ModuleData;
-import com.brandon3055.draconicevolution.api.modules.Module;
+import com.brandon3055.draconicevolution.init.DEModules;
 import net.covers1624.quack.util.SneakyUtils;
 import net.minecraft.nbt.CompoundTag;
 import net.minecraft.nbt.ListTag;
+import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.jetbrains.annotations.Nullable;
 
-import javax.annotation.Nullable;
 import java.util.*;
+import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -29,26 +31,24 @@ import java.util.stream.Stream;
  * Created by brandon3055 and covers1624 on 4/16/20.
  */
 public class ModuleHostImpl implements ModuleHost, PropertyProvider {
+    private static final Logger LOGGER = LogManager.getLogger(ModuleHostImpl.class);
 
-    private static Logger logger = LogManager.getLogger("draconic-modules");
-
-    private int gridWidth;
-    private int gridHeight;
+    private final int gridWidth;
+    private final int gridHeight;
     private UUID providerID = null;
-    private String providerName;
-    private boolean deleteInvalidModules;
-    private TechLevel techLevel;
-    private EnergyData energyCache = null;
-    private ModuleData energyLinkCache = null;
-    private EnergyShareData energyShareCache = null;
-    private final List<ModuleEntity> moduleEntities = new ArrayList<>();
-    private Set<ModuleType<?>> additionalTypeList = new HashSet<>();
-    private Set<ModuleType<?>> typeBlackList = new HashSet<>();
-    private Set<ModuleCategory> categories = new HashSet<>();
-    private List<ConfigProperty> providedProperties = new ArrayList<>();
-    private Map<String, ConfigProperty> propertyMap = new LinkedHashMap<>();
+    private final String providerName;
+    private final boolean deleteInvalidModules;
+    private final TechLevel techLevel;
+    private final List<ModuleEntity<?>> moduleEntities = new ArrayList<>();
+    private final Set<ModuleType<?>> additionalTypeList = new HashSet<>();
+    private final Set<ModuleType<?>> typeBlackList = new HashSet<>();
+    private final Set<ModuleCategory> categories = new HashSet<>();
+    private final List<ConfigProperty> providedProperties = new ArrayList<>();
+    private final Map<String, ConfigProperty> propertyMap = new LinkedHashMap<>();
+    private final Map<ModuleType<?>, Consumer<?>> propertyValidators = new HashMap<>();
+    private final Map<ModuleType<?>, ModuleData<?>> moduleDataCache = new HashMap<>();
     private Consumer<List<ConfigProperty>> propertyBuilder;
-    private Map<ModuleType<?>, Consumer<?>> propertyValidators = new HashMap<>();
+    private BiFunction<ModuleEntity<?>, List<Component>, Boolean> removeCheck = null;
 
     public ModuleHostImpl(TechLevel techLevel, int gridWidth, int gridHeight, String providerName, boolean deleteInvalidModules, ModuleCategory... categories) {
         this.techLevel = techLevel;
@@ -59,22 +59,26 @@ public class ModuleHostImpl implements ModuleHost, PropertyProvider {
         this.categories.addAll(Arrays.asList(categories));
     }
 
+    public void setRemoveCheck(BiFunction<ModuleEntity<?>, List<Component>, Boolean> removeCheck) {
+        this.removeCheck = removeCheck;
+    }
+
     //region ModuleHost
 
     @Override
-    public Stream<Module<?>> getModules() {
+    public Stream<com.brandon3055.draconicevolution.api.modules.Module<?>> getModules() {
         return getModuleEntities().stream().map(ModuleEntity::getModule);
     }
 
     @Override
-    public List<ModuleEntity> getModuleEntities() {
+    public List<ModuleEntity<?>> getModuleEntities() {
         synchronized (moduleEntities) {
             return Collections.unmodifiableList(moduleEntities);
         }
     }
 
     @Override
-    public void addModule(ModuleEntity entity, ModuleContext context) {
+    public void addModule(ModuleEntity<?> entity, ModuleContext context) {
         synchronized (moduleEntities) {
             moduleEntities.add(entity);
         }
@@ -85,7 +89,7 @@ public class ModuleHostImpl implements ModuleHost, PropertyProvider {
     }
 
     @Override
-    public void removeModule(ModuleEntity entity, ModuleContext context) {
+    public void removeModule(ModuleEntity<?> entity, ModuleContext context) {
         synchronized (moduleEntities) {
             moduleEntities.remove(entity);
         }
@@ -104,7 +108,7 @@ public class ModuleHostImpl implements ModuleHost, PropertyProvider {
             clearCaches();
             gatherProperties();
         } else {
-            logger.warn("Cant transfer modules to smaller grid");
+            LOGGER.warn("Cant transfer modules to smaller grid");
         }
     }
 
@@ -159,14 +163,26 @@ public class ModuleHostImpl implements ModuleHost, PropertyProvider {
         return gridHeight;
     }
 
-//    @Override
-//    public void getAttributeModifiers(EquipmentSlotType slot, ItemStack stack, Multimap<Attribute, AttributeModifier> map) {
-//        getInstalledTypes().forEach(t -> t.getAttributeModifiers(SneakyUtils.unsafeCast(getModuleData(t)), slot, stack, map));
-//        getModuleEntities().forEach(e -> e.getAttributeModifiers(slot, stack, map));
-//    }
-
+    @Override
     public void handleTick(ModuleContext context) {
         getModuleEntities().forEach(e -> e.tick(context));
+    }
+
+    @Nullable
+    @Override
+    public <T extends ModuleData<T>> T getModuleData(ModuleType<T> moduleType) {
+        //noinspection unchecked
+        return (T) moduleDataCache.computeIfAbsent(moduleType, ModuleHost.super::getModuleData);
+    }
+
+    @Override
+    public boolean checkRemoveModule(ModuleEntity<?> module, List<Component> reason) {
+        return removeCheck == null || removeCheck.apply(module, reason);
+    }
+
+    private void clearCaches() {
+        moduleDataCache.clear();
+        getModuleEntities().forEach(ModuleEntity::clearCaches);
     }
 
     //endregion
@@ -246,7 +262,7 @@ public class ModuleHostImpl implements ModuleHost, PropertyProvider {
 
             Set<String> installedNames = providedProperties.stream().map(ConfigProperty::getName).collect(Collectors.toSet());
             //Add new properties
-            providedProperties.addAll(gathered.stream().filter(e -> !installedNames.contains(e.getName())).collect(Collectors.toList()));
+            providedProperties.addAll(gathered.stream().filter(e -> !installedNames.contains(e.getName())).toList());
 
             //Repopulate the property map.
             propertyMap.clear();
@@ -263,44 +279,15 @@ public class ModuleHostImpl implements ModuleHost, PropertyProvider {
 
     //endregion
 
-    //helpers
-
-    private void clearCaches() {
-        energyLinkCache = null;
-        energyCache = null;
-        getModuleEntities().forEach(ModuleEntity::clearCaches);
-    }
-
-    public ModuleData getEnergyLink() {
-        return energyLinkCache; //TODO
-    }
-
-    public EnergyShareData getEnergyShare() {
-        if (energyShareCache == null) {
-            energyShareCache = getModuleData(ModuleTypes.ENERGY_SHARE, new EnergyShareData(0));
-        }
-        return energyShareCache; //TODO
-    }
-
-    /**
-     * @return the energy module data for this host. This data is cached for efficiency.
-     */
-    public EnergyData getEnergyData() {
-        if (energyCache == null) {
-            energyCache = getModuleData(ModuleTypes.ENERGY_STORAGE, new EnergyData(0, 0));
-        }
-        return energyCache;
-    }
-
     @Override
     public CompoundTag serializeNBT() {
         CompoundTag nbt = new CompoundTag();
         //Serialize Modules
         ListTag modules = new ListTag();
         synchronized (moduleEntities) {
-            for (ModuleEntity entity : moduleEntities) {
+            for (ModuleEntity<?> entity : moduleEntities) {
                 CompoundTag entityNBT = new CompoundTag();
-                entityNBT.putString("id", entity.module.getRegistryName().toString());
+                entityNBT.putString("id", DEModules.REGISTRY.getKey(entity.module).toString());
                 entity.writeToNBT(entityNBT);
                 modules.add(entityNBT);
             }
@@ -324,14 +311,14 @@ public class ModuleHostImpl implements ModuleHost, PropertyProvider {
             ListTag modules = nbt.getList("modules", 10);
             modules.stream().map(inbt -> (CompoundTag) inbt).forEach(compound -> {
                 ResourceLocation id = new ResourceLocation(compound.getString("id"));
-                Module<?> module = ModuleRegistry.getRegistry().getValue(id);
+                com.brandon3055.draconicevolution.api.modules.Module<?> module = ModuleRegistry.getRegistry().getValue(id);
                 if (module == null) {
-                    logger.warn("Failed to load unregistered module: " + id + " Skipping...");
+                    LOGGER.warn("Failed to load unregistered module: " + id + " Skipping...");
                 } else {
-                    ModuleEntity entity = module.createEntity();
+                    ModuleEntity<?> entity = module.createEntity();
                     entity.readFromNBT(compound);
                     if (deleteInvalidModules && !entity.isPosValid(gridWidth, gridHeight)) {
-                        logger.warn("Deleting module from invalid grid position: " + entity.toString());
+                        LOGGER.warn("Deleting module from invalid grid position: " + entity.toString());
                     } else {
                         moduleEntities.add(entity);
                         entity.setHost(this);
