@@ -5,20 +5,20 @@ import codechicken.lib.raytracer.RayTracer;
 import com.brandon3055.brandonscore.inventory.BlockToStackHelper;
 import com.brandon3055.brandonscore.inventory.InventoryDynamic;
 import com.brandon3055.brandonscore.lib.Pair;
+import com.brandon3055.brandonscore.utils.EnergyUtils;
 import com.brandon3055.draconicevolution.api.capability.DECapabilities;
 import com.brandon3055.draconicevolution.api.capability.ModuleHost;
 import com.brandon3055.draconicevolution.api.capability.PropertyProvider;
+import com.brandon3055.draconicevolution.api.modules.ModuleHelper;
 import com.brandon3055.draconicevolution.api.modules.ModuleTypes;
 import com.brandon3055.draconicevolution.api.modules.data.AOEData;
 import com.brandon3055.draconicevolution.init.EquipCfg;
-import net.minecraft.Util;
 import net.minecraft.client.Minecraft;
 import net.minecraft.core.BlockPos;
-import net.minecraft.network.chat.TranslatableComponent;
+import net.minecraft.network.chat.Component;
 import net.minecraft.network.protocol.game.ClientboundBlockUpdatePacket;
 import net.minecraft.network.protocol.game.ServerboundPlayerActionPacket;
 import net.minecraft.server.level.ServerPlayer;
-import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.item.ItemEntity;
 import net.minecraft.world.entity.player.Player;
 import net.minecraft.world.item.ItemStack;
@@ -33,7 +33,6 @@ import net.minecraftforge.common.ForgeHooks;
 
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 /**
  * Created by brandon3055 on 16/6/20
@@ -49,7 +48,7 @@ public interface IModularMiningTool extends IModularTieredItem {
         }
 
         ModuleHost host = stack.getCapability(DECapabilities.MODULE_HOST_CAPABILITY).orElseThrow(IllegalStateException::new);
-        int aoe = host.getModuleData(ModuleTypes.AOE, new AOEData(0)).getAOE();
+        int aoe = host.getModuleData(ModuleTypes.AOE, new AOEData(0)).aoe();
         boolean aoeSafe = false;
         if (host instanceof PropertyProvider) {
             if (((PropertyProvider) host).hasInt("mining_aoe")) {
@@ -60,77 +59,40 @@ public interface IModularMiningTool extends IModularTieredItem {
             }
         }
 
-        if (aoe > 0) {
-            return breakAOEBlocks(stack, pos, aoe, 0, player, aoeSafe);
-        }
-
-        extractEnergy(player, stack, EquipCfg.energyHarvest);
-        return false;
+        return breakAOEBlocks(host, stack, pos, aoe, 0, player, aoeSafe);
     }
 
-    default boolean breakAOEBlocks(ItemStack stack, BlockPos pos, int breakRadius, int breakDepth, Player player, boolean aoeSafe) {
-        BlockState blockState = player.level.getBlockState(pos);
+    default boolean breakAOEBlocks(ModuleHost host, ItemStack stack, BlockPos pos, int breakRadius, int breakDepth, Player player, boolean aoeSafe) {
+        BlockState blockState = player.level().getBlockState(pos);
         if (!isCorrectToolForDrops(stack, blockState)) {
             return false;
         }
 
         InventoryDynamic inventoryDynamic = new InventoryDynamic();
-        float refStrength = blockStrength(blockState, player, player.level, pos);
+        float refStrength = blockStrength(blockState, player, player.level(), pos);
         Pair<BlockPos, BlockPos> aoe = getMiningArea(pos, player, breakRadius, breakDepth);
-        List<BlockPos> aoeBlocks = BlockPos.betweenClosedStream(aoe.key(), aoe.value()).map(BlockPos::new).collect(Collectors.toList());
+        List<BlockPos> aoeBlocks = BlockPos.betweenClosedStream(aoe.key(), aoe.value()).map(BlockPos::new).toList();
 
         if (aoeSafe) {
             for (BlockPos block : aoeBlocks) {
-                if (!player.level.isEmptyBlock(block) && player.level.getBlockEntity(block) != null) {
-                    if (player.level.isClientSide) player.sendMessage(new TranslatableComponent("item_prop.draconicevolution.aoe_safe.blocked"), Util.NIL_UUID);
-                    else ((ServerPlayer) player).connection.send(new ClientboundBlockUpdatePacket(((ServerPlayer) player).level, block));
+                if (!player.level().isEmptyBlock(block) && player.level().getBlockEntity(block) != null) {
+                    if (player.level().isClientSide) player.sendSystemMessage(Component.translatable("item_prop.draconicevolution.aoe_safe.blocked"));
+                    else ((ServerPlayer) player).connection.send(new ClientboundBlockUpdatePacket(player.level(), block));
                     return true;
                 }
             }
         }
 
-        aoeBlocks.forEach(block -> breakAOEBlock(stack, player.level, block, player, refStrength, inventoryDynamic, rand.nextInt(Math.max(5, (breakRadius * breakDepth) / 5)) == 0));
-        List<ItemEntity> items = player.level.getEntitiesOfClass(ItemEntity.class, new AABB(aoe.key(), aoe.value().offset(1, 1, 1)));
+        aoeBlocks.forEach(block -> breakAOEBlock(stack, player.level(), block, player, refStrength, inventoryDynamic, rand.nextInt(Math.max(5, (breakRadius * breakDepth) / 5)) == 0));
+        List<ItemEntity> items = player.level().getEntitiesOfClass(ItemEntity.class, new AABB(aoe.key(), aoe.value().offset(1, 1, 1)));
         for (ItemEntity item : items) {
-            if (!player.level.isClientSide && item.isAlive()) {
+            if (!player.level().isClientSide && item.isAlive()) {
                 InventoryUtils.insertItem(inventoryDynamic, item.getItem(), false);
                 item.discard();
             }
         }
 
-        //TODO Junk Filter
-//        Set<ItemStack> junkFilter = getJunkFilter(stack);
-//        if (junkFilter != null) {
-//            boolean nbtSens = ToolConfigHelper.getBooleanField("junkNbtSens", stack);
-//            inventoryDynamic.removeIf(check -> {
-//                for (ItemStack junk : junkFilter) {
-//                    if (junk.isItemEqual(check) && (!nbtSens || ItemStack.areItemStackTagsEqual(junk, check))) {
-//                        return true;
-//                    }
-//                }
-//                return false;
-//            });
-//        }
-
-        if (!player.level.isClientSide) {
-//            if (DEOldConfig.disableLootCores) {
-            for (int i = 0; i < inventoryDynamic.getContainerSize(); i++) {
-                ItemStack sis = inventoryDynamic.getItem(i);
-                if (sis != null) {
-                    ItemEntity item = new ItemEntity(player.level, player.getX(), player.getY(), player.getZ(), sis);
-                    item.setPickUpDelay(0);
-                        player.level.addFreshEntity(item);
-                }
-            }
-            player.giveExperiencePoints(inventoryDynamic.xp);
-            inventoryDynamic.clearContent();
-//            } else {
-//                EntityLootCore lootCore = new EntityLootCore(player.world, inventoryDynamic); TODO Entity Stuff
-//                lootCore.setPosition(player.getPosX(), player.getPosY(), player.getPosZ());
-//                player.world.addEntity(lootCore);
-//            }
-        }
-
+        ModuleHelper.handleItemCollection(player, host, EnergyUtils.getStorage(stack), inventoryDynamic);
         return true;
     }
 
@@ -164,40 +126,40 @@ public interface IModularMiningTool extends IModularTieredItem {
         int yOffset = 0;
 
         switch (sideHit) {
-            case 0:
+            case 0 -> {
                 yMax = breakDepth;
                 yMin = 0;
                 zMax = breakRadius;
-                break;
-            case 1:
+            }
+            case 1 -> {
                 yMin = breakDepth;
                 yMax = 0;
                 zMax = breakRadius;
-                break;
-            case 2:
+            }
+            case 2 -> {
                 xMax = breakRadius;
                 zMin = 0;
                 zMax = breakDepth;
                 yOffset = breakRadius - 1;
-                break;
-            case 3:
+            }
+            case 3 -> {
                 xMax = breakRadius;
                 zMax = 0;
                 zMin = breakDepth;
                 yOffset = breakRadius - 1;
-                break;
-            case 4:
+            }
+            case 4 -> {
                 xMax = breakDepth;
                 xMin = 0;
                 zMax = breakRadius;
                 yOffset = breakRadius - 1;
-                break;
-            case 5:
+            }
+            case 5 -> {
                 xMin = breakDepth;
                 xMax = 0;
                 zMax = breakRadius;
                 yOffset = breakRadius - 1;
-                break;
+            }
         }
 
         if (breakRadius == 0) {
@@ -226,28 +188,23 @@ public interface IModularMiningTool extends IModularTieredItem {
             return;
         }
 
-        if (player.getAbilities().instabuild) {
-            if (block.onDestroyedByPlayer(state, world, pos, player, false, fluidState)) {
-                block.destroy(world, pos, state);
-            }
-
-            if (!world.isClientSide) {
-                ((ServerPlayer) player).connection.send(new ClientboundBlockUpdatePacket(world, pos));
-            }
-            return;
-        }
-
-        if (!world.isClientSide) {
-            int xp = ForgeHooks.onBlockBreakEvent(world, ((ServerPlayer) player).gameMode.getGameModeForPlayer(), (ServerPlayer) player, pos);
+        if (player instanceof ServerPlayer serverPlayer) {
+            int xp = ForgeHooks.onBlockBreakEvent(world, serverPlayer.gameMode.getGameModeForPlayer(), (ServerPlayer) player, pos);
             if (xp == -1) {
                 ServerPlayer mpPlayer = (ServerPlayer) player;
                 mpPlayer.connection.send(new ClientboundBlockUpdatePacket(world, pos));
                 return;
             }
 
-            stack.mineBlock(world, state, pos, player);
-            BlockToStackHelper.breakAndCollectWithPlayer(world, pos, inventory, player, xp);
-            extractEnergy(player, stack, EquipCfg.energyHarvest);
+            if (player.getAbilities().instabuild) {
+                if (block.onDestroyedByPlayer(state, world, pos, player, false, fluidState)) {
+                    block.destroy(world, pos, state);
+                }
+            } else {
+                stack.mineBlock(world, state, pos, player);
+                BlockToStackHelper.breakAndCollectWithPlayer(world, pos, inventory, player, xp);
+                extractEnergy(player, stack, EquipCfg.energyHarvest);
+            }
         } else {
             if (block.onDestroyedByPlayer(state, world, pos, player, true, fluidState)) {
                 block.destroy(world, pos, state);
